# Yautja

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  conanfile.txt  profile.txt
src/: CMakeLists.txt  GUI.cpp  GUI.h  artificial intelligence.cpp  artificial intelligence.h  environment.cpp  environment.h  food.cpp  food.h  lib.cpp  lib.h  main.cpp  obstacle.h  predator.cpp  predator.h  prey.cpp  prey.h  segment.cpp  segment.h  stdafx.cpp  stdafx.h
src/assets/GUI/: Background.psd
src/assets/Sprites/: 8bit berry.psd  8bit berryYellow.psd  8bit grass2.psd  8bit pred.psd  8bit prey.psd  8bit rock.psd  BackButton.psd  BeginMenu.psd  CreditsMenu.psd  OptionsMenu.psd  ResetButton.psd  SaveMenu.psd  Table.psd  Title.psd  exitButton.psd
src/util/: IGraphics.h  ITextureAtlas.h  SFMLGraphics.cpp  SFMLGraphics.h  TextureAtlas.cpp  TextureAtlas.h
test/: CMakeLists.txt
